working on question homepage

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -37,7 +37,7 @@ body
       a(href='/')
           button(class='btn home') StockFlow
     div
-      a(href=`/questions/`)
+      a(href=`/`)
           button(class='btn question') Questions
       a(href='/users/guest')
           button(class='btn guest') Demo Login
@@ -50,4 +50,3 @@ body
           button(class='btn entry') Sign up
 
   block content
-
