--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
         link(rel="stylesheet" href="/stylesheets/index.css")
         //- add page specific js
         script(src="/javascripts/index.js" type="module" defer)
+        script(src="https://kit.fontawesome.com/85fa627211.js" crossorigin="anonymous")
 body
  div(class='alert-bar')
   header(class='nav_bar')
@@ -18,7 +19,7 @@ body
       a(href='/')
           button(class='btn home') PetFlow
      div
-       a(href=`/questions/`)
+       a(href=`/`)
           button(class='btn question') Questions
      div(class='search-container')
       input(type='search' class='search-box')
