--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -21,8 +21,14 @@ div(class='question-page')
                                div(class='row question')
                                   div(class='counts-box')
                                     div(class='vote-box')
+                                       if locals.authenticated
+                                          button(class="question-upvote-button")
+                                             i(class="fas fa-chevron-up")
                                        div(class='span')
                                           span(id='number') 0
+                                       if locals.authenticated
+                                          button(class="question-downvote-button")
+                                             <i class="fas fa-chevron-down"></i>
                                        div(class='span')
                                           span votes
                                     div(class='answer-box')
