--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -5,7 +5,7 @@ block content
         div(class='user-homepage-container')
           div(class='profile-container')
             div(class='profile-image-container')
-              p image
+              img(src='/images/doctor-profile-icon.png' class='profile-headshot')
             div(class='profile-info-containers')
               p ________#{user.username}'s Homepage_____
               p ________#{user.email}
