--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -22,14 +22,15 @@ div(class='question-page')
                                   div(class='counts-box')
                                     div(class='vote-box')
                                        if locals.authenticated
-                                          button(class="question-upvote-button")
-                                             i(class="fas fa-chevron-up")
+                                          form(action=`/votes/upvote/question/${question.id}` method='PATCH')
+                                             button(class="question-upvote-button" id=`question-upvote-${question.id}`)
+                                                i(class="fas fa-chevron-up")
                                        div(class='span')
                                           span(class='number' id=`question-counter-${question.id}`) #{question.voteCount}
                                        if locals.authenticated
-                                          form(action='/voting/downvote/question' method='PATCH')
-                                             button(class="question-downvote-button")
-                                                i(class="fas fa-chevron-down" id=`question-downvote-${question.id}`)
+                                          form(action='/votes/downvote/question' method='PATCH')
+                                             button(class="question-downvote-button" id=`question-downvote-${question.id}`)
+                                                i(class="fas fa-chevron-down")
                                        div(class='span')
                                           span votes
                                     div(class='answer-box')
