--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -148,8 +148,9 @@ button.home:hover{
     max-width: 200px;
     /* border-right: 1px solid rgb(204, 204, 204); */
     margin-top: 25px;
-    /* background-color: white; */
 
+    background-color: white;
+    border-right: 1px solid gray
 }
 
 
@@ -160,13 +161,13 @@ button.home:hover{
     justify-content: start;
     min-width: 140px;
     /* width: 100%; */
-    margin-right: 30px;
+    /* margin-right: 30px; */
     padding: 8px 5px 8px 10px;
     background-color: white;
     color: black;
     text-decoration: none;
-    box-shadow: 0px 0px 10px 3px #b1b1b1;
-    border-radius: 5px;
+    /* box-shadow: 0px 0px 10px 3px #b1b1b1; */
+    /* border-radius: 5px; */
 }
 .side-bar.btn:hover{
     background-color: black;
@@ -177,7 +178,7 @@ button.home:hover{
 
 .question-page{
     display: grid;
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 1fr 10fr;
     margin-bottom: 300px;
 
 
@@ -189,15 +190,15 @@ button.home:hover{
 }
 
 .questions-list-container{
-    margin-top: 90px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     border: 10px ;
     background-color: white;
     padding: 24px;
     height: auto;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 3px #b1b1b1;
+    /* border-radius: 10px; */
+    /* box-shadow: 0px 0px 10px 3px #b1b1b1; */
 }
 
 
