--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -60,10 +60,10 @@ body{
     margin: 9px;
     height: 35px;
     border-radius: 2px;
-    max-width: 300px;
+    width: 100%;
 }
 .search-container{
-    margin-right: 5px;
+    margin-right: 10px;
 }
 button {
     display: flexbox;
@@ -468,22 +468,28 @@ button.home:hover{
 /* SINGLE QUESTION PAGE */
 
 .question-container-page{
-    display:flex;
-    justify-content: center;
+    display:grid;
+    grid-template-columns: 1fr 10fr;
 
+}
+
+.side-bar p {
+    margin-top: 60px;
 }
 
 .question-container{
-    margin-top:  80px;
+    margin-top:  55px;
+    background-color: white;
 }
 
 .question-box{
-    background-color: white;
+    display:flex;
+    justify-content: space-around;
     height: auto;
     width: 800px;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 3px #b1b1b1;
+
 }
 
 .answer-box{
