--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -2,12 +2,17 @@ extends layout.pug
 
 block content
   div(class='question-container-page')
+    div(class='side-bar')
+      p this is a div
     div(class='question-container')
         div(class='question-box')
             h1  #{questions.question}
                 each answer in questions.Answers
                   div(class='answer-box')
                     p #{answer.answer}
-        div
-          a(href=`/questions/${questions.id}/answers`)
-            button(class='btn ask-question') Answer
+            div(class='ask-button-container')
+                      a(href=`/questions/add`)
+                          button(class='btn ask-question') Ask Question
+            //- div
+            //-   a(href=`/questions/${questions.id}/answers`)
+            //-     button(class='btn ask-question') Answer
