--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -42,7 +42,7 @@ div(class='question-page')
                                           span answers
                                   div(class='question-display-box')
                                     div(class='question-link-container')
-                                       a(class='question-link-btn' href=`/questions/${question.id}`) #{question.question}
+                                       a(class='question-answer-link-btn' href=`/questions/${question.id}`) #{question.question}
                                     div(class='question-date-author-container')
                                        div(class='q-date-auth-box')
                                            p #{question.createdAt}
