--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -133,22 +133,24 @@ button.home:hover{
     margin-top: 7px;
 }
 
+.ask-button-container {
+    margin-left: 12px;
+}
 
 .btn.ask-question{
     /* position: relative; */
-    justify-content: flex-end;
+    display: inline-block;
     background-color: rgb(86, 205, 50);
     border-radius: 2px;
     color: black;
     font-size: small;
-    height: 40px;
+    height: 50%;
+    width: 90%;
     font-family: inherit;
     margin-right: 50px;
     padding: 5px;
     /* border: 2px solid rgb(64, 161, 34); */
     box-shadow: 0px 0px 2px 1px #2a9221;
-
-
 }
 
 .btn.ask-question:hover{
@@ -191,7 +193,6 @@ button.home:hover{
 .question-page{
     display: grid;
     grid-template-columns: 1fr 10fr;
-    /* margin-bottom: 300px; */
     height: 100vh
 
 }
@@ -202,13 +203,14 @@ button.home:hover{
 }
 
 .questions-list-container{
-    margin-top: 50px;
     display: flex;
     justify-content: center;
     border: 10px ;
     background-color: white;
-    padding: 24px;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    padding: 24px
+    /* height: auto; */
     /* border-radius: 10px; */
     /* box-shadow: 0px 0px 10px 3px #b1b1b1; */
 }
@@ -473,22 +475,49 @@ button.home:hover{
 
 }
 
-.side-bar p {
-    margin-top: 60px;
-}
-
 .question-container{
     margin-top:  55px;
     background-color: white;
 }
 
 .question-box{
-    display:flex;
-    justify-content: space-around;
-    height: auto;
-    width: 800px;
-    padding: 20px;
+    /* display: grid; */
+    height: 600px;
+    width: auto;
+    padding: 24px;
     border-radius: 5px;
+}
+.question-header {
+    display: flex;
+    height: 100px;
+}
+.question-header h1{
+    font-size: 27px
+}
+
+.question-description {
+    /* display: flex;
+    border-bottom: 1px solid #e4e6e8;
+    padding-bottom: 16px;
+    padding-top: 160px;
+    margin-top: 15px */
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+}
+
+.vote-container {
+    position: relative;
+    padding-right: 16px
+
+}
+
+.vote-items{
+
+}
+
+.description-detail-container{
+    width: 100%;
 
 }
 
