--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -38,12 +38,12 @@ html {
     display: flex;
     align-items: flex-start;
     width: 100%;
-    justify-content: space-between;
-    background-color: #181818;
+    justify-content: center;
+    background-color: #c9c9c9;
     box-sizing: border-box;
     height: 55px;
     color: rgb(39, 39, 39);
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 5px 1px #686868;
 }
 /*
 .nav_bar:hover{
@@ -56,26 +56,57 @@ body{
 
 
 .search-box{
-    display:flex;
+    /* display:flex;
     margin: 9px;
     height: 35px;
     border-radius: 2px;
+    width: 100%; */
+    /* padding-left: 32px; */
+    margin: 9px;
+    height: 35px;
+    /* border-color: #bbc0c4; */
+    background-color: white;
+    color: #3c4146;
+    padding-left: 32px;
     width: 100%;
+    /* margin: 0; */
+    /* padding-top: 0.6em; */
+    /* padding-right: 0.7em; */
+    /* padding-bottom: 0.6em; */
+    border: 1px solid #a3a2a2;
+    border-radius: 3px;
+    font-size: 13px;
+    font-family: inherit;
+    /* line-height: 1.15384615; */
 }
 .search-container{
-    margin-right: 10px;
-    width: 400px;
+    /* flex-shrink: 2000; */
+    padding-left: 0px !important;
+    padding-right: 40px !important;
+    flex-grow: 1;
+    position: relative;
+}
+#search-icon{
+    /* right: auto; */
+    left: 25px;
+    color: #bbc0c4;
+    position: absolute;
+    top: 50%;
+    /* vertical-align: center; */
+    margin-top: -12px;
+
+    font-size: 25px;
 }
 button {
     display: flexbox;
    height: 30px;
    margin: 0px 3px 0px 0px;
    padding: 6px 16px;
-   background-color: #181818;
+   background-color:  #c9c9c9;
    border: 0;
    color: white;
    font-weight: bold;
-   font-size: large;
+   font-size: medium;
 
 
 }
@@ -92,7 +123,8 @@ button.homepage {
 button:hover{
     /* background-color:  #2c2c2c; */
     /* background-color: white; */
-    color:greenyellow
+    background-color:rgb(255, 255, 255);
+    color: black;
 
 }
 .home-left-button{
@@ -105,15 +137,17 @@ button.home{
     border-radius: 0;
     font-size: 25px;
     font-weight: 1000;
-    color:rgb(52, 151, 21)
+    color:rgb(88, 88, 88)
 }
 
 button.home:hover{
-    color: greenyellow;
+    color: white;
+    background-color: #c9c9c9;
 }
 
 .btn.entry:hover{
-    background-color:  rgb(67, 161, 39);
+    background-color:  rgb(255, 255, 255);
+    color:black
 }
 
 .entry-container{
@@ -123,9 +157,9 @@ button.home:hover{
     position: relative;
     height: 40px;
     justify-content: flex-end;
-    background-color: rgb(86, 205, 50);
+    background-color: rgb(88, 88, 88);
     border-radius: 1px;
-    color: black;
+    color: rgb(255, 255, 255);
     height: 40px;
     font-family: inherit;
     font-size:small;
@@ -147,21 +181,23 @@ button.home:hover{
 .btn.ask-question{
     /* position: relative; */
     display: inline-block;
-    background-color: rgb(86, 205, 50);
+    background-color: rgb(88, 88, 88);
     border-radius: 2px;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: small;
     height: 50%;
     width: 90%;
     font-family: inherit;
     margin-right: 50px;
     padding: 5px;
-    /* border: 2px solid rgb(64, 161, 34); */
-    box-shadow: 0px 0px 2px 1px #2a9221;
+    /* border: 1px solid rgb #636363; */
+    /* box-shadow: 0px 0px 2px 1px #636363; */
 }
 
 .btn.ask-question:hover{
-    background-color:  rgb(67, 161, 39);
+    background-color:  rgb(255, 255, 255);
+    color:black;
+    border: 1px solid rgb(212, 212, 212)
 }
 
 .side-bar{
@@ -170,7 +206,7 @@ button.home:hover{
     margin-top: 25px;
 
     background-color: white;
-    border-right: 1px solid gray
+    border-right: 1px solid rgb(202, 201, 201)
 }
 
 
@@ -467,7 +503,7 @@ button.home:hover{
     padding-top: 50px;
     background-color: white;
     display: grid;
-    min-height: 700px;
+    min-height: 800px;
     grid-template-columns: 1fr 10fr;
 }
 .user-homepage-sidebar{
