--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,8 +20,9 @@ body
      div
        a(href=`/`)
           button(class='btn question') Questions
-     div(class='search-container')
+     div(class='search-container' style='width: 750px')
       input(type='search' class='search-box')
+      i(class="fas fa-search" id='search-icon')
      div(class='right-corner-buttons')
         div(class='user-homepage-link-container')
             a(href='/users/homepage')
@@ -43,8 +44,9 @@ body
           button(class='btn question') Questions
       a(href='/users/guest')
           button(class='btn guest') Demo Login
-    div(class='search-container')
+    div(class='search-container' style='width: 650px')
       input(type='search' class='search-box')
+      i(class="fas fa-search" id='search-icon')
     div(class='entry-container')
       a(href='/users/login')
           button(class='btn entry') Log in
