--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -185,10 +185,10 @@ button.home:hover{
     border-radius: 2px;
     color: rgb(255, 255, 255);
     font-size: small;
-    height: 50%;
-    width: 90%;
+    height: 50px;
+    width: 150px;
     font-family: inherit;
-    margin-right: 50px;
+    /* margin-right: 50px; */
     padding: 5px;
     /* border: 1px solid rgb #636363; */
     /* box-shadow: 0px 0px 2px 1px #636363; */
@@ -493,7 +493,13 @@ button.home:hover{
     margin-left: 30px;
 
 }
-
+.user-homepage-home-button{
+    padding-top: 30px;
+}
+.user-homepage-home-button a{
+    text-decoration: none;
+    width: auto;
+}
 .profile-headshot{
     height: 200px;
     width: auto;
