rerouted some buttons

--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -53,3 +53,4 @@ div(class='question-page')
             tbody
               tr
                   td you have no questionsplease answer some questions!
+include footer
