--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -188,11 +188,13 @@ button.home:hover{
     height: 50px;
     width: 150px;
     font-family: inherit;
-    /* margin-right: 50px; */
+    margin: 50px 50px 0px 0px;
     padding: 5px;
     /* border: 1px solid rgb #636363; */
     /* box-shadow: 0px 0px 2px 1px #636363; */
 }
+
+
 
 .btn.ask-question:hover{
     background-color:  rgb(255, 255, 255);
@@ -528,6 +530,7 @@ button.home:hover{
 .users-question-box h2 {
     font-weight: 900px;
     font-size: 20px;
+    height: 40px;
     border-bottom: 1px solid rgb(212, 211, 211);
     width: 400px
 }
@@ -539,7 +542,24 @@ button.home:hover{
 .user-homepage-right-container{
     padding-top: 30px;
 }
+.user-btn.ask-question{
+    display: inline-block;
+    background-color: rgb(88, 88, 88);
+    border-radius: 2px;
+    color: rgb(255, 255, 255);
+    font-size: small;
+    height: 50px;
+    width: 150px;
+    font-family: inherit;
+    margin: 0px 0px 0px 0px;
+    padding: 5px;
+}
 
+.user-btn.ask-question:hover{
+    background-color:  rgb(255, 255, 255);
+    color:black;
+    border: 1px solid rgb(212, 212, 212)
+}
 .user-homepage-link {
     text-decoration: none;
     height: 30px;
