added migrations and models and seeds

--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -8,7 +8,7 @@ block content
     div(class='question-container')
         div(class='question-box')
           div(class="question-header")
-            h1 #{question.question}
+            h1 #{question.title}
             div(class='ask-button-container')
               a(href=`/questions/add`)
                 button(class='btn ask-question') Ask Question
