--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -3,6 +3,8 @@ div(class='question-page')
           div(class='side-bar')
                div(class='user-message')
                a(href='/' class='side-bar btn') Home
+               p PUBLIC
+               a(href='') Questions
           div(class='questions-list-container')
              div(class='questions-box')
                  div(class='questions-header')
