finished questions form

--- a/views/login.pug
+++ b/views/login.pug
@@ -21,7 +21,8 @@ block content
                   input(type="password" name="password" id="password")
               div(class='login button')
                 button(type="submit") Log In
-              div(class='signup link')
-              p Don't have an account?
+              div(class='signup-container')
+                p Don't have an account?
+              div(class="signup")
                 a(href='/users/register')
                   span(class='signup-link') Sign Up
