--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -429,10 +429,6 @@ button.home:hover{
     background-color: #2c2c2c
 }
 
-.signup-link{
-    color: rgb(67, 161, 39);
-    margin-left: 5px;
-}
 
 /* SIGNUP PAGE */
 .sign-up-page{
@@ -455,15 +451,28 @@ button.home:hover{
     box-shadow: 0px 0px 10px 3px #b1b1b1;
     background-color: white;
 }
-.signup {
+/* .signup {
     margin-top: 5px;
     display: grid;
     grid-template-rows: 1fr;
     font-weight: bold
+} */
+
+.signup {
+    display: flex;
+    justify-content: center;
 }
 
-.signup.link{
+.signup-container{
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
+}
+
+
+.signup-link{
+    color: rgb(67, 161, 39);
+    margin-left: 5px;
 }
 
 .signup.input,
